--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -15,9 +15,9 @@
         <!-- PROFILE ARTICLE -->
 
         <div class="profile-article">
-            <h2 class="profile-article title">AGENCY PROFILE</h2>  
-            <img src="img/Korporativnyiy_turizm.jpeg" alt="Корпоративный туризм" class="profile-article img">
-            <p class="profile-article p"><b> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, doloribus?</b></p>   
+            <h1 class="profile-article title">AGENCY PROFILE</h1>  
+            <img src="img/turizm.png" alt="Туризм" class="profile-article img">
+            <p class="profile-article p"><b>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, doloribus?</b></p>   
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, recusandae incidunt rerum dolore dignissimos aliquam accusantium provident, aut, tempora laudantium consequuntur ipsam. Optio excepturi delectus recusandae facilis? Nihil in omnis, obcaecati suscipit porro sint sequi minus odio incidunt quod accusamus, eos consequatur fugit vero sed facilis? Modi ratione, adipisci animi perferendis tenetur maiores officiis reiciendis omnis dolorem voluptatibus ad nihil officia voluptates, distinctio sapiente atque nemo eaque a ea, ducimus quas ab! Doloribus aperiam omnis impedit voluptate libero sapiente maxime inventore distinctio repudiandae. Atque, incidunt odio. Magni, labore distinctio non, quos voluptate tenetur magnam eum excepturi animi repudiandae repellendus atque.</p>   
         </div>
 
@@ -25,7 +25,7 @@
         <!-- PRINCIPLES LIST -->
 
         <div class="principles-list">  
-            <h2 class="principles-list title1">OUR PRINCIPLES</h2>    
+            <h1 class="principles-list title1">OUR PRINCIPLES</h1>    
             <ul>
                 <li>
                     <h3 class="principles-list title11">Pellentesque imperdiet.</h3>
@@ -51,7 +51,7 @@
         <!-- OFFER ARTICLE -->
  
         <div class="offer-article">
-            <h2 class="offer-article title2">WHAT WE OFFER</h2>
+            <h1 class="offer-article title2">WHAT WE OFFER</h1>
             <p class="offer-article p2"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse recusandae deserunt quos nisi magnam. Eius voluptates impedit, ad eos nesciunt, doloremque nostrum ipsa deserunt alias dignissimos reprehenderit.</b></p>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dicta odit deserunt molestiae eveniet maiores ipsa facilis, reiciendis hic deleniti nihil odio ducimus obcaecati cupiditate voluptatem commodi eius exercitationem consequatur explicabo ipsum libero tenetur amet magnam at. Cum fuga, obcaecati deserunt enim dolore sunt possimus atque est molestiae laudantium magnam nisi cumque. Tempora, repellat ut odit nemo assumenda accusantium ad non, in illo recusandae saepe doloribus aliquam quis dolores consectetur obcaecati explicabo soluta suscipit vitae maiores et omnis placeat! Repudiandae praesentium neque vel in porro. Similique ex veniam, nobis dignissimos id soluta repellendus odio. Quidem, et. Aliquam officiis inventore dignissimos.</P>
         </div>
