--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -18,14 +18,14 @@
             <div class="article">
                     <h1 class="title">AGENCY PROFILE</h1>
                     <img src="img/layer.png" alt="Авіалайнер" class="img">
-                    <h3 class="title2">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi.</h3>
+                    <h3 class="title2">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit</h3>
                     <p class="p-article">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse jew wligulawe dolor, condimentum ac justo sed, tincidunt commodo molity wer massarete. Nulla non urnatr nisi. Donec varius lectus in vestibulum auctor. Spendisse magna veliternowe dignissim eu commodo ut vestibulum nectro quam. Pellentesque imperdiet velit neque. Ut vestibulum mi sit ametwertilo ornare consectetur. Quisque sed quamhy loi justo. Nulla congue sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravidatylo wtellus. Morbi id wer nolit consequat eros.</p>
                     <p>Duis ac iaculis odio, sed tristique arcu. Cras consequat semper augue. Praesent ut facilisis nisi. Pellentesque consequat felis leorew qwertil condimentumo placerat eros mollis vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent iaculis nisl mattis facilisis enim vitae dictumi magna. Pellentesque laoreet purus congue justo laoreet, blandit tempor leo molestie. Vivamus orci sem molestie actre pharetra non scelerisque sit amet orci. Nulla consequat neque pretium sagittis vulputate. Fusce dictum velit at diam facilisis consectetur. Donec auctor.</p>
             </div>
            
            <!-- list -->
             <div class="list"> 
-                <h1 class="title">OUR PRINCIPLES</h1>
+                <h2 class="title">OUR PRINCIPLES</h2>
                 <ul>
                     <li class="li">
                         <div class="box-li">
@@ -54,8 +54,8 @@
            
             <!-- offer -->
             <div class="offer">
-                <h1 class="offer-title">WHAT WE OFFER</h1>
-                <h3 class="offer-title2">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vehicula eu nislew teget convallis. Vivamus sit amet fringilla nibh, et fringilla elit. Ut in lacus in nulla varius pulvinar. Donec eu magna pretiu yue facilisis sem a, rutrum.</h3>
+                <h2 class="offer-title">WHAT WE OFFER</h2>
+                <h3 class="offer-title2">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vehicula eu nislew teget convallis. Vivamus sit amet fringilla nibh, et fringilla elit. Ut in lacus in nulla varius pulvinar. Donec eu magna pretiu yue facilisis sem a, rutrum magna.  Fet fringilla elit.</h3>
                 <p class="offer-p">Sed dignissim est mauris. Praesent pulvinar vestibulum lorem tristique faucibus. Quisque at tincidunt sapien. Fusce scelerisque dolor nec justo tempus, sed cursus nisl interdum. Vivamus justo mi, semper non semper nec, commodo et ipsum. Integer a porta erat. Pellentesque eu egestas purus, vitae feugiat augue. Sed lobortis tristique convallis. Mauris in diam tempor, imperdiet massa ut, euismod risus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc sollicitudin pretium eros ac semper. Aenean nec bibendum mauris, eget luctus velit. Sed sodales lectus imperdiet neque pretium ultrices. Nulla nec urna nec erat elementum tempor.</p>
                 <div class="offer-list">
                     <ul>
@@ -78,9 +78,9 @@
 
             <!-- testimonial -->
             <div class="testimonial">
-                <h1 class="title-testimonial">TESTIMONIAL</h1>
-                <p class="p-testimonial">Nnatoque penatibus tkamet magnis dis parturient montes, nascetur ridiculus mustro lito. Quisque vehicula eu nisleweri teget convallis. Vivamus sit amet fringilla nibt fringilla. </p>
-                <h3 class="title2-testimonial">Mark Johnson</h3>
+                <h2 class="title-testimonial">TESTIMONIAL</h2>
+                <h3 class="title2-testimonial">Nnatoque penatibus tkamet magnis dis parturient montes, nascetur ridiculus mustro lito. Quisque vehicula eu nisleweri teget convallis. Vivamus sit amet fringilla nibt fringilla. </h3>
+                <h3 class="title3-testimonial">Mark Johnson</h3>
                 <p class="p2-testimonial">Director of Product Management</p>
             </div>
         </div>
