--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -17,7 +17,7 @@
             <!-- article -->
             <div class="article">
                     <h1 class="title">AGENCY PROFILE</h1>
-                    <img src="img/layer.png" alt="Авіалайнер" class="img">
+                    <img src="img/Layer.png" alt="Авіалайнер" class="img">
                     <h3 class="title2">Gellentesque imperdiet gerti loki holewvelit neque. Ut vestibulum mi sit</h3>
                     <p class="p-article">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse jew wligulawe dolor, condimentum ac justo sed, tincidunt commodo molity wer massarete. Nulla non urnatr nisi. Donec varius lectus in vestibulum auctor. Spendisse magna veliternowe dignissim eu commodo ut vestibulum nectro quam. Pellentesque imperdiet velit neque. Ut vestibulum mi sit ametwertilo ornare consectetur. Quisque sed quamhy loi justo. Nulla congue sed turpis nec lacinia. Nulla facilisi. Ut sit amet gravidatylo wtellus. Morbi id wer nolit consequat eros.</p>
                     <p>Duis ac iaculis odio, sed tristique arcu. Cras consequat semper augue. Praesent ut facilisis nisi. Pellentesque consequat felis leorew qwertil condimentumo placerat eros mollis vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent iaculis nisl mattis facilisis enim vitae dictumi magna. Pellentesque laoreet purus congue justo laoreet, blandit tempor leo molestie. Vivamus orci sem molestie actre pharetra non scelerisque sit amet orci. Nulla consequat neque pretium sagittis vulputate. Fusce dictum velit at diam facilisis consectetur. Donec auctor.</p>
