--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -81,11 +81,11 @@
                     <!-- form -->
                     <form action="#" method="post">
                         <div class="info-user">
-                            <input class="name" type="text" name="name" placeholder="YOUR NAME*" minlength="4" required id="">
+                            <input class="name" type="text" name="name" placeholder="YOUR NAME*" required>
                             <input class="email" type="email" name="email" placeholder="YOUR E-MAIL*" required>
-                            <input type="text" name="subject" placeholder="SUBJECT" id="">
+                            <input type="text" name="subject" placeholder="SUBJECT">
                         </div>
-                        <textarea minlength="5" name="message" id="" cols="52" rows="10" placeholder="YOUR MESSAGE*" required></textarea>
+                        <textarea name="message" cols="52" rows="10" placeholder="YOUR MESSAGE*" required></textarea>
                         <button type="submit" >SEND MESSAGE</button>
                     </form>    
                
