--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -29,34 +29,22 @@
             </div>
 
             <!-- row2 -->
-            <div class="row no-gutters justify-content-center ">
-                <div class="col-md-9 col-lg-7 mw-320 mb-21">
-                    <h1 class=" title ">SHARE YOUR
-                        HOLIDAY DREAMS</h1>
-                </div>
-                <div class="col-12 mb-35">    
-                    <p class="p-title ">And find the perfect partner
-                        to fullfill it</p>
-                </div>
-                <div class="col-12">         
-                    <button class="button1">Find your holiday partner</button>
-                </div>      
+            <div>      
+                <h1 class=" title">SHARE YOUR HOLIDAY DREAMS</h1>                           
+                <p class="p-title ">And find the perfect partner to fullfill it</p>
+               <button class="button1">Find your holiday partner</button>                 
             </div>
         </div>
     </div>
 
     <!-- PARTNER -->
-    <div class="container">
-
+    <div class="container ptb"> 
+       
+        <h2 class="title1">Meet a partner for your best holiday</h2>
+                    
         <!-- row1 -->
-        <div class="row justify-content-around ptb">
-
-            <div class="col-12 mb-36">
-                <h2 class="title1">Meet a partner for your
-                    best holiday</h2>
-            </div>
-
-            <div class="col-sm-5 col-lg-3 mb-60-30">
+        <div class="row justify-content-around ">
+            <div class="col-sm-5 col-lg-3 fg1">
                 <figure>
                     <div class="img2-icon">
                         <img src="img/partner/partner1.png" alt="Партнер">
@@ -66,7 +54,7 @@
                     <p class="partner-p">Based in Chicago. I love playing tennis and loud music.</p>
                 </figure>
             </div>
-            <div class="col-sm-5 col-lg-3 order-sm-1 mb-60-30 fg2">
+            <div class="col-sm-5 col-lg-3 order-sm-1 fg2">
                 <figure>
                     <div class="img2-icon">
                         <img src="img/partner/partner2.png" alt="Партнер">
@@ -76,7 +64,7 @@
                     <p class="partner-p">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
                 </figure>
             </div>
-            <div class="col-sm-5 col-lg-3 mb-60-30">
+            <div class="col-sm-5 col-lg-3 fg3">
                 <figure>
                     <div class="img2-icon">
                         <img src="img/partner/partner3.png" alt="Партнер">
@@ -86,7 +74,7 @@
                     <p class="partner-p">I'm a happy person that loves cats and climbing on mountains.</p>
                 </figure>
             </div>
-            <div class="col-sm-5 col-lg-3 order-sm-1 mb-60-30">
+            <div class="col-sm-5 col-lg-3 order-sm-1 fg4">
                 <figure>
                     <div class="img2-icon">
                         <img src="img/partner/partner4.png" alt="Партнер">
@@ -96,10 +84,9 @@
                     <p class="partner-p">Based in Chicago. I love playing tennis and loud music.</p>
                 </figure>
             </div>
-            <div class="col-12 order-sm-1 mb-16">
-                <button class="button2">See other partners</button>
-            </div>
-        </div>
+        </div>   
+
+        <button class="button2">See other partners</button>
     </div>
 
 </body>
