--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -32,8 +32,8 @@
                            <li><a href="#" class="menu__link menu__link--hover">WORK</a></li>
                            <li><a href="#" class="menu__link menu__link--hover">BLOG</a></li>
                            <li><a href="#" class="menu__link menu__link--hover">CONTACT</a></li>
-                           <li><a href="#"><svg class="menu__icon menu__icon--hover"><use xlink:href="img/icon/icon-svg.svg#icon-shoping"></use></svg></a></li>
-                           <li><a href="#"><svg class="menu__icon menu__icon--hover"><use xlink:href="img/icon/icon-svg.svg#icon-search"></use></svg></a></li>
+                           <li><a href="#"><svg class="menu__icon menu__icon--hover"><use xlink:href="img/icon/icon-svg.svg#icon-shoping" ></use></svg></a></li>
+                           <li><a href="#"><svg class="menu__icon menu__icon--hover"><use xlink:href="img/icon/icon-svg.svg#icon-search" ></use></svg></a></li>
                        </ul>
                     </nav>
                 </div>
@@ -174,7 +174,7 @@
                     <p class="copyright">&copy; 2016 MoGo free PSD template by <a href="#">Laaqiq</a></p>
                 </div>
                 <div class="col-lg-6 d-flex justify-content-center justify-content-xl-end mar-bot-19 ">
-                    <form action="#">
+                    <form action="#" method="POST">
                         <input class="text" type="text" name="email" placeholder="Your Email..." >
                         <button class="footer__btn" type="submit">SUBSCRIBE</button>
                     </form>
