js-module-12 - dz

--- a/javascript/js-module-12/public/index.html
+++ b/javascript/js-module-12/public/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <form class="form">
-        <input class="input" type="text" placeholder="Enter url">
+        <input class="input" type="url" placeholder="Enter url" required>
         <button class="button" type="submit">Добавить</button>
     </form>
 
